Fix display issues with Copyright logo (#543)
* Fix display issues with Copyright logo

* Change default color of copyright link

* Remove Copyright text as have symbol and doesn't look good on mobile

* Different fix for Copyright issue

* Revert margin change

* Add span so it works on mobile

--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -357,6 +357,9 @@ p.copyright {
   font-size: 12px;
   color: #F2F2F2;
 }
+p.copyright a {
+  color: white;
+}
 
 .social-media div {
   padding: 0 20px;
